# nsuem-rasp-bot

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
.sqlx/: query-8fda37445e416da4a40befdc9e8df02b70ee15c6861e1b75c699ffdba2fc3139.json  query-957955c6d06d9115555f7e46e0f6f4bb1d1407e947394a6c86ef2e7c45cbd7ec.json
migrations/: 20251118111218_create_schedules.up.sql  20251118131642_drop_updated_at.sql
src/: lib.rs  main.rs  schedule.rs  schedule_cache.rs
src/lists/: groups.rs
src/utils/: cyrillic.rs  mod.rs
