[package]
name = "nsuem-rasp-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.11.2"
reqwest = "0.12"
scraper = "0.24"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
