[package]
name = "nsuem-rasp-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls", "migrate" ] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.18"
